style/main.css
a {
    color: #B8D3FF;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

body {
    background-color: black;
    color: white;
    font-family: "Cabin", sans-serif;
    margin: 0px;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

h1 {
    margin: 0px;
}

h2 {
    margin: 0px;
}

hr {
    border-color: #696969;
    border-width: 0px;
    border-bottom-width: 1px;
    align-self: stretch;
    margin: 5px 0px;
}

html {
    height: 100%;
    width: 100%;
}

p {
    margin: 0px;
}

.secondary-text {
    color: #AAAAAA
}

.section {
    background-color: rgba(69, 69, 69, 0.3);
    border-radius: 25px;
    padding: 25px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 5px;
    z-index: 1;
}

.section-list {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 25px;
    align-items: stretch;
}

#background {
    bottom: 0px;
    left: 0px;
    overflow: hidden;
    position: fixed;
    right: 0px;
    top: 0px;
    z-index: 0;
}

#background .star {
    position: absolute;
}

#content {
    display: flex;
    gap: 25px;
}

#main {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    gap: 25px;
}

#title {
    align-items: center;
    text-align: center;
}

